# pytestDemo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  executor.json  pyproject.toml  pytest.ini  requirements.txt
api/: auth.py  base_ws_api.py  common.py  constants.py  item.py  ping.py  player.py  service_names.py  user.py  ws_constants.py
config/: secrets.yml.template
data/: secrets.yml.template
pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
scripts/: account_helpers.py  update_template.py
test_data/api_test_data/: bind_phone.py  change_password.py  get_user_info.py  login.py  register.py  updat_name.py
test_data/api_test_data/http/: change_password.py  get_item.py  get_items.py  login.py  register.py
test_data/api_test_data/scenario/: user_profile_scenario.py
test_data/api_test_data/ws/: bind_phone.py  get_item.py  get_items.py  get_user_info.py  updat_name.py
test_data/common/: base.py  enums.py  expectations.py  helpers.py
test_data/scenario_test_data/: user_profile_scenario.py
test_data/ui_test_data/scenario/: purchase.py
test_data/ui_test_data/single/: login.py
testcases/api_test/: conftest.py  test_bind_phone.py  test_change_password.py  test_connect.py  test_get_user_info.py  test_login.py  test_register.py  test_update_name.py
testcases/scenario_test/: test_user_profile_scenario.py
testcases/ui_test/: conftest.py
utils/: allure_utils.py  api_provider.py  async_base_ws.py  base_request.py  case_verify_tool.py  config_loader.py  read_data.py  result_base.py
(+12 files in other folders)
