[project]
name = "pytest-auto-test"
dynamic = ["version"]
# Support Python 3.11+.
requires-python = ">=3.11"

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "single"