[project]
name = "pytest-demo"
dynamic = ["version"]
# Support Python 3.11+.
requires-python = ">=3.11"
dependencies = [
    "allure-pytest",
    "Faker",
    "msgpack",
    "pytest",
    "pytest-asyncio",
    "pytest-sugar",
    "python-dotenv",
    "PyYAML",
    "requests",
    "websockets",
    "pyhumps",
    "pre-commit>=4.3.0",
]

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["testcases*", "scripts*"]
